Version 0.98
- Fix MAC address printing if there is none (by Andrej Ota)

Version 0.97
- added error handling after ipulog_read() to prevent endless loops

Version 0.96
- support for old mysql versions (Alexander Janssen)
- support for dotted-quad IP addresses in MySQL (Alexander Janssen)
- added support for synchronous write to LOGEMU (Michael Stolovitzsky)
- autoconf now checks for mysql .so libraries instead of static .a
- autoconf now includes /usr/src/linux/include, because most distros
  now have a glibc-provided /usr/include/linux :(
- removed ./configure from CVS tree as it may cause inconsistencies
- better commented example configuration file
- Makefiles now know DESTDIR (for RPM packaging)
- documentation now built at release-time, not compile time
- support for logfile-rotating, using new SIGHUP handler

Version 0.95
- libipulog problems of 0.94 fixed
- 1.0 now really soon

Version 0.94
- fixed stupid build problem because of missing libipulog
  (i'll never try to be intelligent again ;))

Version 0.93
- fixes logfile bug: wrong filename and line numbers printed
- fixes config file parsing, new generic get_word() in conffile.c
- fixes bug in ulogd_LOGEMU.c on big-endian systems
- fixes segfault when packet received but no interpreters registered
	(reported by Drori Ghiora)
- sigterm handler installed for clean shutdown
- logfile now fflush()ed after each line printed
- ulogd_LOGEMU now prints date and hostname, just as syslog does

Version 0.92
- fixes libipulog loop-bug (reported by Drori Ghiora)

Version 0.91
- changes for new kernel ULOG. Includes support for multilink netlink
  messages.

Version 0.9
- configuration file routines
- plugins are able to register new configfile keys
- new MYSQL output plugin
- new syslog compatibility output plugin

Version 0.3

- new PWSNIFF interpreter plugin
- verbose error reporting

Version 0.2

- real daemon, we are forking now