@@ -20,7 +20,7 @@ CFLAGS+=-DULOGD_CONFIGFILE=\"$(ULOGD_CONFIGFILE)\"
 #CFLAGS+=$(INCIPULOG) $(INCCONFFILE)
 CFLAGS+=-I/usr/src/linux/include
 #CFLAGS+=@DEFS@
-#CFLAGS+=-g -DDEBUG -DDEBUG_MYSQL
+#CFLAGS+=-g -DDEBUG -DDEBUG_MYSQL -DDEBUG_PGSQL
 
 LIBS=@LIBS@
 
@@ -33,3 +33,7 @@ ULOGD_SL:=BASE OPRINT PWSNIFF LOGEMU
 MYSQL_CFLAGS=-I@MYSQLINCLUDES@ @EXTRA_MYSQL_DEF@
 MYSQL_LDFLAGS=@DATABASE_LIB_DIR@ @DATABASE_LIB@
 
+# postgreSQL output support
+#ULOGD_SL+=PGSQL
+PGSQL_CFLAGS=-I@PGSQLINCLUDES@
+PGSQL_LDFLAGS=@DATABASE_LIB_DIR@ @DATABASE_LIB@
