@@ -1,5 +1,5 @@
 # Example configuration for ulogd
-# $Id$
+# $Id: ulogd.conf,v 1.5 2001/05/20 14:44:37 laforge Exp $
 #
 
 ######################################################################
@@ -63,3 +63,16 @@ mysqldb ulogd
 mysqlhost localhost
 # load the plugin (remove the '#' if you want to enable it)
 #plugin /usr/local/lib/ulogd/ulogd_MYSQL.so
+
+
+#
+# ulogd_PGSQL.so: optional logging into a PostgreSQL database
+#
+# database information
+pgsqltable ulog
+pgsqlpass
+pgsqluser postgres
+pgsqldb ulogd
+pgsqlhost localhost
+#load the plugin (remove the '#' if you want to enable it)
+#plugin /usr/local/lib/ulogd/ulogd_PGSQL.so
